Evoluindo Sucessive Shortest Path. Ainda não funciona.